fix ch3 overlapped next button bug

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -12,7 +12,8 @@ $chapter-progression-item-width: 20px;
 $main-button-max-width: 400px;
 $modal-player-feedback-width: 50%;
 $modal-player-feedback-height: 320px;
-$modal-player-feedback-textarea-height: 190px;
+$modal-player-feedback-height-short: 230px;
+$modal-player-feedback-textarea-height: 70%;
 $ch3-other-user-profile-container-height: 600px;
 $ch3-other-user-spectrum-height: 80px;
 $ch3-other-user-mini-card-height: 70px;
@@ -54,7 +55,7 @@ $border-radius-3: 100px;
 /* blur */
 $blur-1: 5px;
 $blur-2: 10px;
-$blur-3: 20px;
+$blur-3: 17px;
 $blur-4: 50px;
 
 /* shadow effects */
